--- a/Lychee.Stocks/Lychee.Stocks.Test/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks.Test/packages.config
@@ -9,15 +9,22 @@
   <package id="FSharp.Core" version="4.5.2" targetFramework="net472" />
   <package id="HeadlessChromium.Puppeteer.Lambda.Dotnet" version="1.0.1.31" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net472" />
-  <package id="Lychee.Infrastructure" version="1.2.0" targetFramework="net472" />
-  <package id="LycheeScrapper.Domain" version="1.2.3" targetFramework="net472" />
+  <package id="LazyCache" version="2.0.4" targetFramework="net472" />
+  <package id="Lychee.Caching" version="1.0.1" targetFramework="net472" />
+  <package id="Lychee.Domain" version="1.0.0" targetFramework="net472" />
+  <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
+  <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
+  <package id="Lychee.Infrastructure" version="1.4.0" targetFramework="net472" />
+  <package id="LycheeScrapper.Domain" version="1.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.CodeCoverage" version="16.4.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.NET.Test.Sdk" version="16.4.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
@@ -25,13 +32,16 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="Moq" version="4.13.1" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net472" developmentDependency="true" />
   <package id="PuppeteerSharp" version="1.20.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Extensions" version="1.0.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Should" version="1.0.0" targetFramework="net472" />
-  <package id="SimpleInjector" version="4.8.1" targetFramework="net472" />
+  <package id="Serilog" version="2.8.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net472" />
+  <package id="SimpleInjector" version="4.9.0" targetFramework="net472" />
   <package id="SimpleInjector.Integration.Web" version="4.8.1" targetFramework="net472" />
   <package id="SimpleInjector.Packaging" version="4.8.1" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
@@ -51,9 +61,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
