--- a/Lychee.Stocks/Lychee.Stocks/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks/packages.config
@@ -12,8 +12,13 @@
   <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
-  <package id="Lychee.Infrastructure" version="1.2.0" targetFramework="net472" />
-  <package id="LycheeScrapper.Domain" version="1.2.4" targetFramework="net472" />
+  <package id="LazyCache" version="2.0.4" targetFramework="net472" />
+  <package id="Lychee.Caching" version="1.0.1" targetFramework="net472" />
+  <package id="Lychee.Domain" version="1.0.0" targetFramework="net472" />
+  <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
+  <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
+  <package id="Lychee.Infrastructure" version="1.4.0" targetFramework="net472" />
+  <package id="LycheeScrapper.Domain" version="1.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
@@ -24,11 +29,13 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.0.2" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Http.Headers" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
@@ -36,14 +43,14 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="PuppeteerSharp" version="1.20.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Extensions" version="1.0.0" targetFramework="net472" />
   <package id="PuppeteerSharp.Contrib.Should" version="1.0.0" targetFramework="net472" />
   <package id="Serilog" version="2.8.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net472" />
-  <package id="SimpleInjector" version="4.8.1" targetFramework="net472" />
+  <package id="SimpleInjector" version="4.9.0" targetFramework="net472" />
   <package id="SimpleInjector.Integration.Web" version="4.8.1" targetFramework="net472" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="4.8.1" targetFramework="net472" />
   <package id="SimpleInjector.Packaging" version="4.8.1" targetFramework="net472" />
@@ -64,9 +71,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
